Several Changes & Performance Impovements in Command-API